--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -260,13 +260,13 @@ canvas {
     <section>
       <div class="sectionTitle">
         <h1>Learning after school & applying in work</h1>
-        <p style="margin-left:0px;"><img src="../images/study_and_apply.png" width="100%" height="400"/></p>
+        <p style="margin-left:0px;"><img src="../images/study_and_apply.png" width="100%" height="600"/></p>
       </div>
       
       <div class="sectionContent">
         <article>
-          <p style="margin-left:25px;">"Tiny OS": implement test items scheduling mechanism through timer interrupt routing with c++ "observe pattern" and mips assembly language to solve the halting problem in some testing program.</p>
-            <p style="margin-left:50px;">After this implementation, the code has run more stable and fast since the testing driver code will hang on especially in new hardware and software of new model of set top box.</p>
+          <p style="margin-left:25px;">" Tiny OS": implement test items scheduling mechanism through timer interrupt routing with c++ "observe pattern" and mips assembly language to solve the halting problem in some testing program.</p>
+            <p style="margin-left:50px;">After this implementation, the code has run more stable and fast, and the testing driver code never hang on set top box.</p>
         </article>
       </div>
       <div class="clear"></div>
