--- a/ch2/cv_cschen.html
+++ b/ch2/cv_cschen.html
@@ -240,7 +240,7 @@ canvas {
 
     <section>
       <div class="sectionTitle">
-        <h1>推薦函</h1>
+        <h1>推荐函</h1>
       </div>
       
       <div class="sectionContent">
