--- a/ch2/index.html
+++ b/ch2/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>首頁</title>
+  <title>首页</title>
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -17,19 +17,20 @@
     <header>
 	  <div id="strapline">
 	    <div id="welcome_slogan">
-	      <h3>歡迎來到 <span>陳鍾樞的網頁</span></h3>
+	      <h3>欢迎来到 <span>陈钟枢的网页</span></h3>
 	    </div><!--close welcome_slogan-->
 	    <div id="language_container">
         <select name="language", id="lang", onchange="ChangeLanguage()">
         <option value="English">English</option>
-        <option value="Chinese1" selected>中文繁體</option>
+        <option value="Chinese1">中文繁體</option>
+        <option value="Chinese2" selected>中文简体</option>
         </select>
 	    </div><!--close language_container-->
     </div><!--close strapline-->
 	  <nav>
 	    <div id="menubar">
         <ul id="nav">
-          <li class="current"><a href="index.html">首頁</a></li>
+          <li class="current"><a href="index.html">首页</a></li>
           <li><a href="mywork.html">我的作品</a></li>
           <li><a href="more.html">更多</a></li>
           <li><a href="personal.html">私人</a></li>
@@ -42,7 +43,7 @@
 	    <div class="slideshow">
 	      <ul class="slideshow">
           <li class="show"><img width="940" height="250" src="../images/home_1.jpg" alt="&quot;甜蜜的家&quot;" /></li>
-          <li><img width="940" height="250" src="../images/home_2.jpg" alt="&quot;快樂&quot;" /></li>
+          <li><img width="940" height="250" src="../images/home_2.jpg" alt="&quot;快乐&quot;" /></li>
           <li><img width="940" height="250" src="../images/home_3.jpg" alt="&quot;甜美的笑容&quot;" /></li>
         </ul>
 	    </div><!--close slideshow-->
@@ -51,23 +52,23 @@
 	<div id="site_content">
 	  <div id="content">
       <div class="content_item">
-	      <h1>歡迎光臨我的網站</h1> 
-            <p>我住台灣，是個有經驗的軟體工程師，網球、騎腳踏車、看電影是我的興趣。</p>
+	      <h1>欢迎光临我的网站</h1> 
+            <p>我住台湾，是个有经验的软体工程师，网球、骑自行车、看电影是我的兴趣。</p>
           <div class="content_container">       
 		        <h3>我的技能︰</h3>
-		        <p>LLVM backend, compiler, CPU architecture, Verilog, C++, Digital TV software, OOP/Design Pattern, OOA/UML tool, Linux device driver, cmake, html/javascript.</p>
+		        <p>LLVM backend, compiler for cpu/gpu/npu, CPU architecture, Verilog, C++.</p>
           </div><!--close content_container-->
 
           <div class="content_container">       
 		        <h3>我的嗜好︰</h3>
-		        <p>電腦與程式。 網球、騎腳踏車、看電影。</p>
+		        <p>电脑与程式。网球、骑自行车、看电影。</p>
           </div><!--close content_container-->
 		  </div><!--close content_item-->
     </div><!--close content-->   
 	</div><!--close site_content-->  	
 
   <footer>
-    網頁樣板來自 <a href="http://www.freehtml5templates.co.uk">免費 HTML5 樣板</a>
+    网页样板来自 <a href="http://www.freehtml5templates.co.uk">免费 HTML5 样板</a>
   </footer>
 	
   </div><!--close main-->
