--- a/ch2/personal.html
+++ b/ch2/personal.html
@@ -17,12 +17,13 @@
     <header>
 	  <div id="strapline">
 	    <div id="welcome_slogan">
-	      <h3>歡迎來到 <span>陳鍾樞的網頁</span></h3>
+	      <h3>欢迎来到 <span>陈钟枢的网页</span></h3>
 	    </div><!--close welcome_slogan-->
 	    <div id="language_container">
         <select name="language", id="lang", onchange="ChangeLanguage()">
         <option value="English">English</option>
-        <option value="Chinese1" selected>中文繁體</option>
+        <option value="Chinese1">中文繁體</option>
+        <option value="Chinese2" selected>中文简体</option>
         </select>
 	    </div><!--close language_container-->
     </div><!--close strapline-->
@@ -41,7 +42,7 @@
     <div id="slideshow_container">  
 	  <div class="slideshow">
 	    <ul class="slideshow">
-          <li class="show"><img class="resize" src="../images/personal/2007-I can bike 1.jpg" alt="&quot;我會騎車&quot;" /></li>
+          <li class="show"><img class="resize" src="../images/personal/2007-I can bike 1.jpg" alt="&quot;我会骑车&quot;" /></li>
           <li><img class="resize" src="../images/personal/2005-Baby1.jpg" alt="&quot;嬰兒&quot;" /></li>
           <li><img class="resize" src="../images/personal/2005-Baby2.jpg" alt="&quot;嬰兒&quot;" /></li>
           <li><img class="resize" src="../images/personal/2005-Baby3.jpg" alt="&quot;嬰兒&quot;" /></li>
