--- a/ch2/more.html
+++ b/ch2/more.html
@@ -17,19 +17,20 @@
     <header>
 	  <div id="strapline">
 	    <div id="welcome_slogan">
-	      <h3>歡迎來到 <span>陳鍾樞的網頁</span></h3>
+	      <h3>欢迎来到 <span>陈钟枢的网页</span></h3>
 	    </div><!--close welcome_slogan-->
 	    <div id="language_container">
         <select name="language", id="lang", onchange="ChangeLanguage()">
         <option value="English">English</option>
         <option value="Chinese1" selected>中文繁體</option>
+        <option value="Chinese2" selected>中文简体</option>
         </select>
 	    </div><!--close language_container-->
     </div><!--close strapline-->
 	  <nav>
 	    <div id="menubar">
         <ul id="nav">
-          <li><a href="index.html">首頁</a></li>
+          <li><a href="index.html">首页</a></li>
           <li><a href="mywork.html">我的作品</a></li>
           <li class="current"><a href="more.html">更多</a></li>
           <li><a href="personal.html">私人</a></li>
@@ -41,9 +42,9 @@
     <div id="slideshow_container">
 	    <div class="slideshow">
 	      <ul class="slideshow">
-          <li class="show"><img width="940" height="250" src="../images/more_1.jpg" alt="&quot;騎腳踏車&quot;" /></li>
-          <li><img width="940" height="250" src="../images/more_2.jpg" alt="&quot;花蓮海岸線&quot;" /></li>
-          <li><img width="940" height="250" src="../images/more_3.jpg" alt="&quot;雙溪的房子&quot;" /></li>
+          <li class="show"><img width="940" height="250" src="../images/more_1.jpg" alt="&quot;骑自行车&quot;" /></li>
+          <li><img width="940" height="250" src="../images/more_2.jpg" alt="&quot;花莲海岸线&quot;" /></li>
+          <li><img width="940" height="250" src="../images/more_3.jpg" alt="&quot;双溪的房子&quot;" /></li>
         </ul>
 	    </div><!--close slideshow-->
 	  </div><!--close slideshow_container-->
@@ -52,34 +53,34 @@
 	  <div id="content">
       <div class="content_item">
         <h2>更多</h2>
-        <p>我的其他網頁資訊連結與電子郵件如下︰</p>
+        <p>我的其他网页资讯连结与电子邮件如下︰</p>
 
           <div class="content_container">
-            <h3>電子郵件︰</h3>
-              <a href="mailto:gamma_chen@yahoo.com.tw"><img style="vertical-align: middle;" src="../images/email-icon.png" title="電子郵件" width="32" height="32" />  gamma_chen@yahoo.com.tw</a>
+            <h3>电子邮件︰</h3>
+              <a href="mailto:gamma_chen@yahoo.com.tw"><img style="vertical-align: middle;" src="../images/email-icon.png" title="电子邮件" width="32" height="32" />  gamma_chen@yahoo.com.tw</a>
           </div><!--close content_container-->
 
           <div class="content_container">
-            <h3>其他網頁資訊連結︰</h3>
+            <h3>其他网页资讯连结︰</h3>
               <a href="http://blog.xuite.net/cschen07/blog"><img style="vertical-align: middle;" src="../images/blog-icon.png" title="部落格" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
-              <a href="http://jonathan2251.github.io/wr/index.html"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="我的寫作" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="http://jonathan2251.github.io/wr/index.html"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="我的写作" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
               <a href="https://www.linkedin.com/in/%E9%8D%BE%E6%A8%9E-%E9%99%B3-29714874"><img style="vertical-align: middle;" src="../images/Linkedin-icon.png" title="Linkedin" width="32" height="32" /></a>
           </div><!--close content_container-->
 
           <div class="content_container">
-            <h3>簡歷:</h3>
-              <a href="resume_cschen.html"><img style="vertical-align: middle;" src="../images/html-icon-brief.png" title="簡歷(html)" width="32" height="32" /> resume_cschen.html</a><br>
-              <a href="resume_cschen.pdf"><img style="vertical-align: middle;" src="../images/Adobe-PDF-Reader-Book-icon.png" title="簡歷(pdf)" width="32" height="32" /> resume_cschen.pdf</a>
+            <h3>简历:</h3>
+              <a href="resume_cschen.html"><img style="vertical-align: middle;" src="../images/html-icon-brief.png" title="简历(html)" width="32" height="32" /> resume_cschen.html</a><br>
+              <a href="resume_cschen.pdf"><img style="vertical-align: middle;" src="../images/Adobe-PDF-Reader-Book-icon.png" title="简历(pdf)" width="32" height="32" /> resume_cschen.pdf</a>
           </div><!--close content_container-->
 
           <div class="content_container">
-            <h3>詳細履歷:</h3>
-              <a href="cv_cschen.html"><img style="vertical-align: middle;" src="../images/html-icon-detail.png" title="詳細履歷(html)" width="32" height="32" /> cv_cschen.html</a><br>
-              <a href="cv_cschen.pdf"><img style="vertical-align: middle;" src="../images/Adobe-PDF-Reader-Book-icon.png" title="詳細履歷(pdf)" width="32" height="32" /> cv_cschen.pdf</a>
+            <h3>详细履历:</h3>
+              <a href="cv_cschen.html"><img style="vertical-align: middle;" src="../images/html-icon-detail.png" title="详细履历(html)" width="32" height="32" /> cv_cschen.html</a><br>
+              <a href="cv_cschen.pdf"><img style="vertical-align: middle;" src="../images/Adobe-PDF-Reader-Book-icon.png" title="详细履历(pdf)" width="32" height="32" /> cv_cschen.pdf</a>
           </div><!--close content_container-->
 
           <div class="content_container">
-            <h3>推薦函:</h3>
+            <h3>推荐函:</h3>
               <a href="RL_Marvell.pdf"><img style="vertical-align: middle;" src="../images/Letter-icon.png" title="Recommendation Letter" width="32" height="32" /> RL_Marvell.pdf</a> <br>
           </div><!--close content_container-->
 	  </div><!--close content_item-->
@@ -87,7 +88,7 @@
 	</div><!--close site_content-->
 
   <footer>
-    <a href="http://www.iconarchive.com/">免費的圖像網站</a>
+    <a href="http://www.iconarchive.com/">免费的图像网站</a>
   </footer>
   </div><!--close main-->
 
