--- a/en/index.html
+++ b/en/index.html
@@ -23,6 +23,7 @@
         <select name="language", id="lang", onchange="ChangeLanguage()">
         <option value="English" selected>English</option>
         <option value="Chinese1">中文繁體</option>
+        <option value="Chinese2">中文简体</option>
         </select>
 	    </div><!--close language_container-->
     </div><!--close strapline-->
