--- a/en/index.html
+++ b/en/index.html
@@ -56,7 +56,7 @@
             <p>I am an experienced programmer who live in Taiwan, tennis, biking and movie are my hobby.</p>
           <div class="content_container">       
 		        <h3>My skills/knowledge:</h3>
-		        <p>LLVM backend, compiler, CPU architecture, Verilog, C++, Digital TV software, OOP/Design Pattern, OOA/UML tool, Linux device driver, cmake, html/javascript.</p>
+		        <p>LLVM backend, compiler for cpu/gpu/npu, CPU architecture, Verilog, C++.</p>
           </div><!--close content_container-->
 
           <div class="content_container">       
