--- a/ch1/index.html
+++ b/ch1/index.html
@@ -56,7 +56,7 @@
             <p>我住台灣，是個有經驗的軟體工程師，網球、騎腳踏車、看電影是我的興趣。</p>
           <div class="content_container">       
 		        <h3>我的技能︰</h3>
-		        <p>LLVM backend, compiler, CPU architecture, Verilog, C++, Digital TV software, OOP/Design Pattern, OOA/UML tool, Linux device driver, cmake, html/javascript.</p>
+		        <p>LLVM backend, compiler for cpu/gpu/npu, CPU architecture, Verilog, C++.</p>
           </div><!--close content_container-->
 
           <div class="content_container">       
