correct typing error

--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -200,7 +200,7 @@ canvas {
           <p>設計半自動的軟體系統，自動執行用gcc編譯器編譯benchmark程式，並產生excel比較圖表。</p>
           <p>為提升Marvell公司gcc與llvm編譯器軟體工具效能，介紹Polly軟體系統。Polly是針對loop最佳化的開放原始碼專案。</p>
             <p style="margin-left:40px;"><img src="../images/polly_benchmark.png" width="600" height="150"/></p>
-          <p>提出與實作DNS領域語言解決方案應用在ARM 64位元Csim上。</p>
+          <p>提出與實作DSL領域語言解決方案應用在ARM 64位元Csim上。</p>
           <p>用cmake替代make於Csim上。</a></p>
             <p style="margin-left:25px;">優點: 比make簡潔與跨平台。</p>
         </article>
