--- a/ch2/cv_cschen.html
+++ b/ch2/cv_cschen.html
@@ -200,7 +200,7 @@ canvas {
           <p>设计半自动的软体系统，自动执行用gcc编译器编译benchmark程式，并产生excel比较图表。</p>
           <p>为提升Marvell公司gcc与llvm编译器软体工具效能，介绍Polly软体系统。 Polly是针对loop最佳化的开放原始码专案。</p>
             <p style="margin-left:40px;"><img src="../images/polly_benchmark.png" width="600" height="150"/></p>
-          <p>提出与实作DNS领域语言解决方案应用在ARM 64位元Csim上。</p>
+          <p>提出与实作DSL领域语言解决方案应用在ARM 64位元Csim上。</p>
           <p>用cmake替代make于Csim上。</a></p>
             <p style="margin-left:25px;">优点: 比make简洁与跨平台。</p>
         </article>
