--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -242,6 +242,7 @@ canvas {
       <div class="clear"></div>
     </section>
     
+    <div class="pagebreak"> </div>
     <section>
       <div class="sectionTitle">
         <h1>Learning after school & applying in work</h1>
