--- a/en/resume_cschen.html
+++ b/en/resume_cschen.html
@@ -132,7 +132,7 @@ canvas {
       
           <div class="sectionContent">
             <!-- Don't use ../../ow/tree/master/sortingnetwork/ThesisMaster since pdf is not work for the relative path -->
-            <p><a href="https://github.com/Jonathan2251/ow/tree/master/sortingnetwork/ThesisMaster"><img style="vertical-align: middle;" src="../images/user_phd.png" title="The Researches of Column Sort and Related Problems" width="16" height="16" /> The Researches of Column Sort and Related Problems</a><a href="https://etds.ncl.edu.tw/cgi-bin/gs32/gsweb.cgi/ccd=CMVpn4/record?r1=1&h1=0"><img style="vertical-align: middle;" src="../images/user_phd.png" title="at library" width="16" height="16" /> at library</a></p>
+            <p><a href="https://github.com/Jonathan2251/ow/tree/master/sortingnetwork/ThesisMaster"><img style="vertical-align: middle;" src="../images/user_phd.png" title="The Researches of Column Sort and Related Problems" width="16" height="16" /> The Researches of Column Sort and Related Problems</a><a href="https://etds.ncl.edu.tw"><img style="vertical-align: middle;" src="../images/user_phd.png" title="at library" width="16" height="16" /> at library (input "column sort")</a></p>
             <p style="font-size: 0.7em;"><a href="http://www.csie.ntnu.edu.tw/~linss/publications.htm"> Publish Conference: 陳鍾樞，林順喜，2000，行排列法簡化步驟之研究，2000網際網路與分散式系統研討會，台南成功大學，台灣，中華民國，Vol.2，頁85-93。</a></p>
           </div>
         </section>
