--- a/en/resume_cschen.html
+++ b/en/resume_cschen.html
@@ -35,7 +35,7 @@ canvas {
     <div id="contactDetails">
       <ul>
         <p>Chung-Shu Chen 陳鍾樞<br></p>
-        <p>+886-970577923  &nbsp;&nbsp;&nbsp;&nbsp; jonathan.chen@kneron.us</p>
+        <p>+886-970577923  &nbsp;&nbsp;&nbsp;&nbsp; gamma_chen@yahoo.com.tw</p>
         <p>I am a compiler developer with good experience in llvm cpu and gpu backend, lld linker, npu/onnx, c++, OpenGl/glsl
         and simulator, ..., and enjoy with compiler.</p>
       </ul>
