--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -184,6 +184,7 @@ canvas {
           <p>My work:</p>
             <p style="margin-left:25px;">Implement compiler (fontend + llvm backend) for 80% of texture related API and optimization by myself alone and document writing.</p>
             <p style="margin-left:25px;">Instruct and help other engineers for the other 20% of texture related API, review their implementation and co-work with the leader of texture part of architect.</p>
+            <p style="margin-left:25px;">Implement Prefetch-Sample optimization for running 2D-sampling instructions by driver before load/run glsl shader.</p>
             <p style="margin-left:25px;">Implement compiler supporting our GPU's load/store for RGBA fixed floating point format of vulkan (32, 16, 11, 10 and 2 bits; NaN Infinity) alone and document writing.</p>
         </article>
       </div>
