--- a/ch2/cv_cschen.html
+++ b/ch2/cv_cschen.html
@@ -193,6 +193,7 @@ canvas {
           <p>我的工作:</p>
             <p style="margin-left:25px;">独立完成80% texture相关的API与optimization (frontend + llvm backend)与document撰写。</p>
             <p style="margin-left:25px;">指导别的工程师完成其余20% texture相关的API, 核对并与texture的架构leader一起合作。</p>
+            <p style="margin-left:25px;">完成Prefetch-Sample optiomization, 让driver在载入glsl bin与执行sampling指令前就可驱动2D sampling指令。</p>
             <p style="margin-left:25px;">独立完成GPU对vulkan load/store RGBA 固定浮点格式(32, 16, 11, 10 and 2 bits; NaN Infinity)支援的指令生成与document撰写。</p>
         </article>
       </div>
