number of texture api

--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -192,7 +192,7 @@ canvas {
           <p style="margin-left:25px;">為支援自行設計的手機GPU, 移植ARM的code。20%前端需修改, 50%後端需修改(以行數計算).</p>
           <p>我的工作:</p>
             <p style="margin-left:25px;">獨立完成80% texture相關的API與optimization (frontend + llvm backend)與document撰寫。</p>
-            <p style="margin-left:25px;">指導別的工程師完成其餘20% texture相關的API, 核對並與texture的架構leader一起合作。</p>
+            <p style="margin-left:25px;">指導別的工程師完成其餘20% texture相關的API, <a href="https://www.khronos.org/registry/OpenGL/specs/es/3.2/GLSL_ES_Specification_3.20.html#texture-functions"> 80 APIs totally here </a>, 核對並與texture的架構leader一起合作。</p>
             <p style="margin-left:25px;">完成Prefetch-Sample optiomization, 讓driver在載入glsl bin與執行sampling指令前就可驅動2D sampling指令。</p>
             <p style="margin-left:25px;">獨立完成GPU對vulkan load/store RGBA 固定浮點格式(32, 16, 11, 10 and 2 bits; NaN Infinity)支援的指令生成與document撰寫。</p>
         </article>
