--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -54,7 +54,7 @@ canvas {
         </div>
         
         <div class="sectionContent">
-          <p>二十年c/c++軟體開發經驗，八年編譯器相關工具開發經驗，碩士時研究平行處理。</p>
+          <p>二十年c/c++軟體開發經驗，九年編譯器相關工具開發經驗，碩士時研究平行處理。</p>
         </div>
       </article>
       <div class="clear"></div>
@@ -181,6 +181,30 @@ canvas {
       <div class="sectionTitle">
         <h1>工作貢獻</h1>
       </div>
+      <div class="sectionTitle">
+        <h1>Biren</h1>
+      </div>
+
+      <div class="sectionContent">
+        <article>
+          <p>Gpu CodGen for tensor instructions and usharpid handling. </p>
+          <p>Gpu optimatization and bug fix. </p>
+          <p>CodGen for paralel processiong of our Cude-like language async{...}. </p>
+        </article>
+      </div>
+
+      <div class="sectionTitle">
+        <h1>Kneron</h1>
+      </div>
+
+      <div class="sectionContent">
+        <article>
+          <p>Re-implement top 2 layers of our npu compiler for our common graph data structure to handle onnx. </p>
+          <p>Inmplemnt compiler input interface to support encription-onnx format. </p>
+          <p>Confirm solution for MLIR supporting. </p>
+        </article>
+      </div>
+
       <div class="sectionTitle">
         <h1>Hisilcon</h1>
       </div>
