--- a/ch2/cv_cschen.html
+++ b/ch2/cv_cschen.html
@@ -182,6 +182,30 @@ canvas {
         <h1>工作贡献</h1>
       </div>
       <div class="sectionTitle">
+        <h1>Biren</h1>
+      </div>
+
+      <div class="sectionContent">
+        <article>
+          <p>Gpu CodGen for tensor instructions and usharpid handling. </p>
+          <p>Gpu optimatization and bug fix. </p>          
+          <p>CodGen for paralel processiong of our Cude-like language async{...}. </p>
+        </article>
+      </div>
+
+      <div class="sectionTitle">
+        <h1>Kneron</h1>
+      </div>
+
+      <div class="sectionContent">
+        <article>
+          <p>Re-implement top 2 layers of our npu compiler for our common graph data structure to handle onnx. </p>
+          <p>Inmplemnt compiler input interface to support encription-onnx format. </p>
+          <p>Confirm solution for MLIR supporting. </p>
+        </article>
+      </div>
+
+      <div class="sectionTitle">
         <h1>Hisilcon</h1>
       </div>
       
