--- a/ch2/cv_cschen.html
+++ b/ch2/cv_cschen.html
@@ -54,7 +54,7 @@ canvas {
         </div>
         
         <div class="sectionContent">
-          <p>二十年c/c++软体开发经验，八年编译器相关工具开发经验，硕士时研究平行处理。</p>
+          <p>二十年c/c++软体开发经验，九年编译器相关工具开发经验，硕士时研究平行处理。</p>
         </div>
       </article>
       <div class="clear"></div>
