correct typing error

--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -188,7 +188,7 @@ canvas {
       <div class="sectionContent">
         <article>
           <p>Gpu CodGen for tensor instructions and usharpid handling. </p>
-          <p>Gpu optimatization and bug fix. </p>
+          <p>Gpu Optimatization and bug fix. </p>
           <p>CodGen for paralel processiong of our Cude-like language async{...}. </p>
         </article>
       </div>
@@ -200,7 +200,7 @@ canvas {
       <div class="sectionContent">
         <article>
           <p>Re-implement top 2 layers of our npu compiler for our common graph data structure to handle onnx. </p>
-          <p>Inmplemnt compiler input interface to support encription-onnx format. </p>
+          <p>Inmplement compiler input interface to support encription-onnx format. </p>
           <p>Confirm solution for MLIR supporting. </p>
         </article>
       </div>
