--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -191,7 +191,7 @@ canvas {
       <div class="sectionContent">
         <article>
           <p>Re-implement top 2 layers of our npu compiler for our common graph data structure to handle onnx. </p>
-          <p>Inmplemnt compiler input interface to support encription-onnx format. </p>
+          <p>Implement compiler input interface to support encription-onnx format. </p>
           <p>Confirm solution for MLIR supporting. </p>
         </article>
       </div>
