--- a/en/resume_cschen.html
+++ b/en/resume_cschen.html
@@ -58,6 +58,15 @@ canvas {
       <div class="clear"></div>
     </section>
 
+    <section>
+      <div class="sectionContent">
+        <div id="container" style="width: 100%;">
+          <canvas id="canvas" height="90"></canvas>
+        </div>
+        <script> drawSkillBarChart(); </script>
+      </div>
+      <div class="clear"></div>
+    </section>
     
     <section>
       <div class="sectionTitle">
@@ -105,6 +114,18 @@ canvas {
         <h1 class="instaFade delayOne">EXPERIENCE</h1>
       </div>
 
+      <div id="container"" style="solid #000000;" class="instaFade delayOne">
+        <canvas id="canvas2" "width: 100%;"></canvas>
+      </div>
+      <script> 
+        var workPeriod = createWorkPeriod();
+        var workContent = createWorkContent();
+        var experience = new Experience(workPeriod, workContent);
+        var config = createDefaultConfig();
+        experience.draw(config);
+      </script>
+      <div class="clear"></div>
+    </section>
     
     <section>
       <div class="sectionTitle">
