comment the celling phone displaying problem for my javascript

--- a/en/resume_cschen.html
+++ b/en/resume_cschen.html
@@ -114,8 +114,9 @@ canvas {
         <h1 class="instaFade delayOne">EXPERIENCE</h1>
       </div>
 
-      <div id="container"" style="solid #000000;" class="instaFade delayOne">
-        <canvas id="canvas2" "width: 100%;"></canvas>
+<!-- width="800" is the problem for display canvas2 on cell phone -->
+      <div id="container" style="solid #000000;" class="instaFade delayOne">
+        <canvas id="canvas2" width="800"></canvas>
       </div>
       <script> 
         var workPeriod = createWorkPeriod();
