--- a/ch1/resume_cschen.html
+++ b/ch1/resume_cschen.html
@@ -116,7 +116,7 @@ canvas {
         <h1 class="instaFade delayOne">經驗</h1>
       </div>
     
-      <div id="container"" style="solid #000000;" class="instaFade delayOne">
+      <div id="container" style="solid #000000;" class="instaFade delayOne">
         <canvas id="canvas2" width="800"></canvas>
       </div>
       <script>
