--- a/ch1/resume_cschen.html
+++ b/ch1/resume_cschen.html
@@ -77,9 +77,9 @@ canvas {
       
       <div class="sectionContent">
         <p style="font-size: 0.7em;">很高興我的作品已被LLVM接受，出現在 <a href="http://llvm.org/docs/tutorial/#external-tutorials"> http://llvm.org/docs/tutorial/#external-tutorials</a></p>
-        <p>如何建立LLVM後端編譯器 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbd/index.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github lbd" width="16" height="16" /> http://jonathan2251.github.io/lbd/index.html</a> </p>
-        <p>如何建立LLVM後端系統工具 &nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbt/index.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github lbt" width="16" height="16" /> http://jonathan2251.github.io/lbt/index.html</a> </p>
-        <p>GPU編譯器概念 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbd/gpu.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="The concept of GPU compiler" width="16" height="16" /> http://jonathan2251.github.io/lbd/gpu.html</a> </p>
+        <p>如何建立LLVM後端編譯器 &nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbd/index.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github lbd" width="16" height="16" /> http://jonathan2251.github.io/lbd/index.html</a> </p>
+        <p>如何建立LLVM後端系統工具 &nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbt/index.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github lbt" width="16" height="16" /> http://jonathan2251.github.io/lbt/index.html</a> </p>
+        <p>GPU編譯器概念 &nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbd/gpu.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="The concept of GPU compiler" width="16" height="16" /> http://jonathan2251.github.io/lbd/gpu.html</a> </p>
       </div>
       <div class="clear"></div>
     </section>
@@ -138,7 +138,7 @@ canvas {
           <div class="sectionContent">
             <!-- Don't use ../../ow/tree/master/sortingnetwork/ThesisMaster since pdf is not work for the relative path -->
             <p><a href="https://github.com/Jonathan2251/ow/tree/master/sortingnetwork/ThesisMaster"><img style="vertical-align: middle;" src="../images/user_phd.png" title="行排序法的相關研究" width="16" height="16" /> The Researches of Column Sort and Related Problems</a></p>
-            <p style="font-size: 0.7em;"><a href="http://www.csie.ntnu.edu.tw/~linss/publications.htm"> 論文期刊： 陳鍾樞，林順喜，2000，行排列法簡化步驟之研究，2000網際網路與分散式系統研討會，台南成功大學，台灣，中華民國，Vol.2，頁85-93。</a></p>
+            <p style="font-size: 0.7em;"><a href="http://www.csie.ntnu.edu.tw/~linss/publications.htm"> 論文期刊： 上述鏈結網頁搜尋 "行排列法簡化步驟之研究"</a></p>
           </div>
         </section>
       </div>
@@ -159,7 +159,7 @@ canvas {
     
     <section>
       <div class="sectionTitle">
-        <a href="https://jonathan2251.github.io/ws/ch1/cv_cschen.html"> 更詳細的履歷</a>
+        <a href="https://jonathan2251.github.io/ws/ch1/cv_cschen.pdf"> 更詳細的履歷</a>
       </div>
       <div class="clear"></div>
     </section>
