short text in graph

--- a/en/resume_cschen.html
+++ b/en/resume_cschen.html
@@ -116,7 +116,7 @@ canvas {
 
 <!-- width="800" is the problem for display canvas2 on cell phone -->
       <div id="container" style="solid #000000;" class="instaFade delayOne">
-        <canvas id="canvas2" width="800"></canvas>
+        <canvas id="canvas2"></canvas>
       </div>
       <script> 
         var workPeriod = createWorkPeriod();
