--- a/en/resume_cschen.html
+++ b/en/resume_cschen.html
@@ -60,8 +60,8 @@ canvas {
 
     <section>
       <div class="sectionContent">
-        <div id="container" style="width: 100%;">
-          <canvas id="canvas" height="90"></canvas>
+        <div id="container">
+          <canvas id="canvas"></canvas>
         </div>
         <script> drawSkillBarChart(); </script>
       </div>
