--- a/ch2/resume_cschen.html
+++ b/ch2/resume_cschen.html
@@ -63,7 +63,7 @@ canvas {
     <section>
       <div class="sectionContent">
         <div id="container" style="width: 100%;">
-            <canvas id="canvas" height="90"></canvas>
+            <canvas id="canvas"></canvas>
         </div>
         <script> drawSkillBarChart(); </script>
       </div>
