--- a/en/resume_cschen.html
+++ b/en/resume_cschen.html
@@ -60,7 +60,7 @@ canvas {
 
     <section>
       <div class="sectionContent">
-        <div id="container">
+        <div id="container" style="width: 100%;">
           <canvas id="canvas"></canvas>
         </div>
         <script> drawSkillBarChart(); </script>
