fix canvas2 width bug

--- a/en/resume_cschen.html
+++ b/en/resume_cschen.html
@@ -61,7 +61,7 @@ canvas {
     <section>
       <div class="sectionContent">
         <div id="container" style="width: 100%;">
-          <canvas id="canvas"></canvas>
+          <canvas id="canvas" height="90"></canvas>
         </div>
         <script> drawSkillBarChart(); </script>
       </div>
@@ -116,7 +116,7 @@ canvas {
 
 <!-- width="800" is the problem for display canvas2 on cell phone -->
       <div id="container" style="solid #000000;" class="instaFade delayOne">
-        <canvas id="canvas2"></canvas>
+        <canvas id="canvas2" width="800"></canvas>
       </div>
       <script> 
         var workPeriod = createWorkPeriod();
