--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -61,7 +61,7 @@ canvas {
     <section>
       <div class="sectionContent">
         <div id="container" style="width: 100%;">
-          <canvas id="canvas"></canvas>
+          <canvas id="canvas" height="90"></canvas>
         </div>
         <script> drawSkillBarChart(); </script>
       </div>
