--- a/en/resume_cschen.html
+++ b/en/resume_cschen.html
@@ -74,7 +74,7 @@ canvas {
       </div>
       
       <div class="sectionContent">
-        <p style="font-size: 0.7em;">I am proud of my work is accepted by LLVM documentation, appears at <a href="http://llvm.org/docs/tutorial/#external-tutorials"> http://llvm.org/docs/tutorial/#external-tutorials</a></p>
+        <p style="font-size: 70%;">I am proud of my work is accepted by LLVM documentation, appears at <a href="http://llvm.org/docs/tutorial/#external-tutorials"> http://llvm.org/docs/tutorial/#external-tutorials</a></p>
         <p>Tutorial: Create an LLVM Backend compiler &nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbd/index.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github lbd" width="16" height="16" /> http://jonathan2251.github.io/lbd/index.html</a> </p>
         <p>Tutorial: Create an LLVM Backend Toolchain &nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbt/index.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github lbt" width="16" height="16" /> http://jonathan2251.github.io/lbt/index.html</a> </p>
         <p>The concept of GPU compiler &nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbd/gpu.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="The concept of GPU compiler" width="16" height="16" /> http://jonathan2251.github.io/lbd/gpu.html</a> </p>
@@ -138,7 +138,7 @@ canvas {
           <div class="sectionContent">
             <!-- Don't use ../../ow/tree/master/sortingnetwork/ThesisMaster since pdf is not work for the relative path -->
             <p><a href="https://github.com/Jonathan2251/ow/tree/master/sortingnetwork/ThesisMaster"><img style="vertical-align: middle;" src="../images/user_phd.png" title="The Researches of Column Sort and Related Problems" width="16" height="16" /> The Researches of Column Sort and Related Problems</a></p>
-            <p style="font-size: 0.7em;"><a href="http://www.csie.ntnu.edu.tw/~linss/publications.htm"> Conference： Search "行排列法簡化步驟之研究" on above link</a></p>
+            <p style="font-size: 70%;"><a href="http://www.csie.ntnu.edu.tw/~linss/publications.htm"> Conference： Search "行排列法簡化步驟之研究" on above link</a></p>
           </div>
         </section>
       </div>
