--- a/en/resume_cschen.html
+++ b/en/resume_cschen.html
@@ -34,7 +34,7 @@ canvas {
 
     <div id="contactDetails">
       <ul>
-        <p> a1 I am a compiler developer with good experience in llvm cpu and gpu backend, lld linker, npu/onnx, c++, OpenGl/glsl
+        <p> b1 I am a compiler developer with good experience in llvm cpu and gpu backend, lld linker, npu/onnx, c++, OpenGl/glsl
         and simulator, ..., and enjoy with compiler.</p>
       </ul>
     </div>
