--- a/ch2/cv_cschen.html
+++ b/ch2/cv_cschen.html
@@ -187,9 +187,9 @@ canvas {
 
       <div class="sectionContent">
         <article>
-          <p>Gpu CodGen for tensor instructions and usharpid handling. </p>
-          <p>Gpu Optimatization and bug fix. </p>          
-          <p>CodGen for paralel processiong of our Cude-like language async{...}. </p>
+          <p>Gpu tensor指令与usharpid处理。</p>
+          <p>Gpu编译器优化与bug fix。</p>          
+          <p>我们的Cude-like语言async{...}平行处理解法白皮书。</p>
         </article>
       </div>
 
@@ -199,9 +199,9 @@ canvas {
 
       <div class="sectionContent">
         <article>
-          <p>Re-implement top 2 layers of our npu compiler for our common graph data structure to handle onnx. </p>
-          <p>Implement compiler input interface to support encription-onnx format. </p>
-          <p>Confirm solution for MLIR supporting. </p>
+          <p>改写我们的NPU编译器上两层的IR中间码转换代码以提供共同的hardware independent图形资料结构, 以利多种NPU的支持。</p>
+          <p>支持加密格式的ONNX与config档输入。</p>
+          <p>确认如何支持MLIR。</p>
         </article>
       </div>
 
