--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -182,7 +182,7 @@ canvas {
         <article>
           <p>Gpu CodGen for tensor instructions and usharpid handling. </p>
           <p>Gpu optimatization and bug fix. </p>
-          <p>CodGen for paralel processiong of our Cude-like language async{...}. </p>
+          <p>Propose solution for paralel processiong of our Cude-like language async{...}. </p>
         </article>
       </div>
 
@@ -193,7 +193,7 @@ canvas {
       <div class="sectionContent">
         <article>
           <p>Re-implement top 2 layers of our npu compiler for our common graph data structure to handle onnx. </p>
-          <p>Implement compiler input interface to support encription-onnx format. </p>
+          <p>Implement compiler input interface to support encription-onnx and config file format. </p>
           <p>Confirm solution for MLIR supporting. </p>
         </article>
       </div>
