--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -180,9 +180,9 @@ canvas {
 
       <div class="sectionContent">
         <article>
-          <p>Gpu CodGen for tensor instructions and usharpid handling. </p>
-          <p>Gpu Optimatization and bug fix. </p>
-          <p>CodGen for paralel processiong of our Cude-like language async{...}. </p>
+          <p>Gpu tensor指令與usharpid處理。</p>
+          <p>Gpu編譯器最佳化與bug fix。</p>
+          <p>我們的Cude-like語言async{...}平行處理解法白皮書。</p>
         </article>
       </div>
 
