--- a/ch2/cv_cschen.html
+++ b/ch2/cv_cschen.html
@@ -199,7 +199,7 @@ canvas {
 
       <div class="sectionContent">
         <article>
-          <p>改写我们的NPU编译器上两层的IR中间码转换代码以提供共同的hardware independent图形资料结构, 以利多种NPU的支持。</p>
+          <p>改写我们的NPU编译器上两层的IR中间码转换代码以提供共同的hardware independent图形数据结构, 以利多种NPU的支持。</p>
           <p>支持加密格式的ONNX与config档输入。</p>
           <p>确认如何支持MLIR。</p>
         </article>
