--- a/ch2/cv_cschen.html
+++ b/ch2/cv_cschen.html
@@ -189,7 +189,7 @@ canvas {
         <article>
           <p>Gpu tensor指令与usharpid处理。</p>
           <p>Gpu编译器优化与bug fix。</p>          
-          <p>我们的Cude-like语言async{...}平行处理解法白皮书。</p>
+          <p>我们的Cude-like语言<a href="https://github.com/Jonathan2251/ws/ref/async_explain">async{...}</a>平行处理解法白皮书。</p>
         </article>
       </div>
 
