--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -182,7 +182,7 @@ canvas {
         <article>
           <p>Gpu CodGen for tensor instructions and usharpid handling. </p>
           <p>Gpu optimatization and bug fix. </p>
-          <p>Propose solution for paralel processiong of our Cude-like language async{...}. </p>
+          <p>Propose solution for paralel processiong of our Cude-like language <a href="https://github.com/Jonathan2251/ws/ref/async_explain">async{...}</a>. </p>
         </article>
       </div>
 
