--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -165,7 +165,7 @@ canvas {
       <div class="sectionContent">
         <p> Take course "Image processing" and program: <a href="https://github.com/Jonathan2251/ow/tree/master/master-homework/image_processing/JPEG"> Jpeg decoder</a> </p>
         <p> Web and javascript: <a href="https://jonathan2251.github.io/ws/en/resume_cschen.html"> As my resume</a> and <a href="https://jonathan2251.github.io/ws/en/index.html"> my personal web site</a></p>
-        <p> <a href="http://www.graphviz.org/Home.php">Graphivz:</a> as some graph diagrams used in this CV. Source code: <a href="https://jonathan2251.github.io/ws/images/mywork_1.gv"> mywork_1.gv </a> and <a href="https://jonathan2251.github.io/ws/images/study_and_apply.gv"> study_and_apply.gv</a></p>
+        <p> <a href="http://www.graphviz.org">Graphivz:</a> as some graph diagrams used in this CV. Source code: <a href="https://jonathan2251.github.io/ws/images/mywork_1.gv"> mywork_1.gv </a> and <a href="https://jonathan2251.github.io/ws/images/study_and_apply.gv"> study_and_apply.gv</a></p>
       </div>
       <div class="clear"></div>
     </section>
