--- a/ch2/resume_cschen.html
+++ b/ch2/resume_cschen.html
@@ -138,7 +138,7 @@ canvas {
           <div class="sectionContent">
             <!-- Don't use ../../ow/tree/master/sortingnetwork/ThesisMaster since pdf is not work for the relative path -->
             <p><a href="https://github.com/Jonathan2251/ow/tree/master/sortingnetwork/ThesisMaster"><img style="vertical-align: middle;" src="../images/user_phd.png" title="行排序法的相关研究" width="16" height="16" /> The Researches of Column Sort and Related Problems</a></p>
-            <p style="font-size: 0.7em;"><a href="http://www.csie.ntnu.edu.tw/~linss/publications.htm"> 论文期刊： 上述链结网页搜寻 "行排列法简化步骤之研究"</a></p>
+            <p style="font-size: 0.7em;"><a href="http://w1.csie.ntnu.edu.tw/~linss/publications.htm"> 论文期刊： 上述链结网页搜寻 "行排列法简化步骤之研究"</a></p>
           </div>
         </section>
       </div>
