--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -175,6 +175,18 @@ canvas {
         <h1>工作貢獻</h1>
       </div>
       <div class="sectionTitle">
+        <h1>Lightelligence</h1>
+      </div>
+
+      <div class="sectionContent">
+        <article>
+          <p>整理編譯gnu與llvm的RISCV開放原始碼工具鏈。</p>
+          <p>探查TVM, DPC++,SYCL/OpenCL可行性。</p>
+          <p>調查與評估符合我們光計算架構，供應商可提供的AI與科學計算應用的軟硬體。</p>
+        </article>
+      </div>
+
+      <div class="sectionTitle">
         <h1>Biren</h1>
       </div>
 
