--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -175,6 +175,18 @@ canvas {
         <h1>ACHIEVEMENT</h1>
       </div>
       <div class="sectionTitle">
+        <h1>Lightelligence</h1>
+      </div>
+      
+      <div class="sectionContent">
+        <article>
+          <p>Build gnu and llvm toolchain for RISCV from open source. </p>
+          <p>Survey open sources TVM, SYCL/OpenCL. </p>
+          <p>Survey and evalutate vendors' SW and HW in AI and data science applications for optical computing. </p>
+        </article>
+      </div>
+
+      <div class="sectionTitle">
         <h1>Biren</h1>
       </div>
       
