--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -183,6 +183,7 @@ canvas {
           <p>整理編譯gnu與llvm的RISCV開放原始碼工具鏈。</p>
           <p>探查TVM, DPC++,SYCL/OpenCL可行性。</p>
           <p>調查與評估符合我們光計算架構，供應商可提供的AI與科學計算應用的軟硬體。</p>
+          <p>領導 Aurora 硬件產品的軟件開發並自己編寫編譯器後端。</p>
         </article>
       </div>
 
