--- a/ch2/cv_cschen.html
+++ b/ch2/cv_cschen.html
@@ -181,7 +181,6 @@ canvas {
       <div class="sectionTitle">
         <h1>工作贡献</h1>
       </div>
-      </div>
       <div class="sectionTitle">
         <h1>Lightelligence</h1>
       </div>
@@ -191,6 +190,7 @@ canvas {
           <p>整理编译gnu与llvm的RISCV开原码工具链。</p>
           <p>探查TVM, DPC++,SYCL/OpenCL可行性。</p>
           <p>调查与评估符合我们光计算架构，供应商可提供的AI与科学计算应用的软硬体。</p>
+          <p>领导 Aurora 硬件产品的软件开发并自己编写编译器后端。</p>
         </article>
       </div>
 
