--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -180,10 +180,12 @@ canvas {
 
       <div class="sectionContent">
         <article>
-          <p>整理編譯gnu與llvm的RISCV開放原始碼工具鏈。</p>
+          <p>整理編譯gnu與llvm的RISCV開放原始碼工具鏈, 並跑在qemu與gem5。</p>
           <p>探查TVM, DPC++,SYCL/OpenCL可行性。</p>
           <p>調查與評估符合我們光計算架構，供應商可提供的AI與科學計算應用的軟硬體。</p>
           <p>領導 Aurora 硬件產品的軟件開發並自己編寫編譯器後端。</p>
+          <p>針對我們的ISA, Coding clang's builtin-functions與實作llvm編譯器。</p>
+          <p>實作TaskGraph並開發與TVM-compiler以及Runtime合作介面使得我們的平台可以支持深度學習的圖編譯。</p>
         </article>
       </div>
 
