correction typing error

--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -182,7 +182,7 @@ canvas {
         <article>
           <p>Build gnu and llvm toolchain for RISCV from open source. </p>
           <p>Survey open sources TVM, SYCL/OpenCL. </p>
-          <p>Survey and evalutate vendors' SW and HW in AI and data science applications for optical computing. </p>
+          <p>Survey and evaluate vendors' SW and HW in AI and data science applications for optical computing. </p>
           <p>Lead the SW development for Auroa HW product and program the compiler backend myself. </p>
         </article>
       </div>
