Refine English via Chatgpt

--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -54,7 +54,7 @@ canvas {
         </div>
         
         <div class="sectionContent">
-          <p>二十年c/c++軟體開發經驗，十年編譯器相關工具開發經驗，碩士時研究平行處理。</p>
+          <p>二十年c/c++軟體開發經驗，十三年編譯器相關工具開發經驗，碩士時研究平行處理。</p>
         </div>
       </article>
       <div class="clear"></div>
@@ -91,8 +91,8 @@ canvas {
       
       <div class="sectionContent">
         <article>
-          <p>1997-1999 碩士班，六月 1999，國立台灣師範大學，台北，主修：資訊科學。</p>
-          <p>1991-1994 學士班，六月 1994，國立台灣科技大學，台北，主修：工業工程。</p>
+          <p>1997-1999 碩士班，國立台灣師範大學，台北，主修：資訊科學。</p>
+          <p>1991-1994 學士班，國立台灣科技大學，台北，主修：工業工程。</p>
         </article>
       </div>
       <div class="clear"></div>
