Refine English via Chatgpt

--- a/ch2/resume_cschen.html
+++ b/ch2/resume_cschen.html
@@ -35,8 +35,7 @@ canvas {
     <div id="contactDetails">
       <ul>
         <p>陈钟枢<br></p>
-        <p>我是位有经验的compiler开发者，开发过llvm cpu and gpu backend, lld linker, npu/onnx, c++, OpenGl/glsl compiler与simulator，...，    
-        对写compiler感到快乐。</p>
+        <p>我是一位编译器开发者，拥有在 LLVM CPU 和 GPU 后端、LLD 链接器、NPU/ONNX、C++、OpenGL/GLSL、模拟器等方面的扎实经验。我热衷于编译器及相关技术的开发工作。</p>
       </ul>
     </div>
     <div class="clear"></div>
@@ -54,7 +53,7 @@ canvas {
         </div>
         
         <div class="sectionContent">
-          <p>二十年c/c++软体开发经验，十年编译器相关工具开发经验，硕士时研究平行处理。</p>
+          <p>二十年c/c++软体开发经验，十三年编译器相关工具开发经验，硕士时研究平行处理。</p>
         </div>
       </article>
       <div class="clear"></div>
@@ -91,8 +90,8 @@ canvas {
       
       <div class="sectionContent">
         <article>
-          <p>1997-1999 硕士班，六月 1999，国立台湾师范大学，台北，主修：资讯科学。</p>
-          <p>1991-1994 学士班，六月 1994，国立台湾科技大学，台北，主修：工业工程。</p>
+          <p>1997-1999 硕士班，国立台湾师范大学，台北，主修：资讯科学。</p>
+          <p>1991-1994 学士班，国立台湾科技大学，台北，主修：工业工程。</p>
         </article>
       </div>
       <div class="clear"></div>
