--- a/ch1/resume_cschen.html
+++ b/ch1/resume_cschen.html
@@ -35,8 +35,7 @@ canvas {
     <div id="contactDetails">
       <ul>
         <p>陳鍾樞<br></p>
-        <p>我是位有經驗的compiler開發者，開發過llvm cpu and gpu backend, lld linker, npu/onnx, c++, OpenGl/glsl compiler與simulator，...， 
-        對寫compiler感到快樂。</p>
+        <p>我是一位編譯器開發者，擁有在 LLVM CPU 和 GPU 後端、LLD 連結器、NPU/ONNX、C++、OpenGL/GLSL、模擬器等方面的紮實經驗。我熱衷於編譯器及相關技術的開發工作。</p>
       </ul>
     </div>
     <div class="clear"></div>
@@ -54,7 +53,7 @@ canvas {
         </div>
         
         <div class="sectionContent">
-          <p>二十年c/c++軟體開發經驗，十年編譯器相關工具開發經驗，碩士時研究平行處理。</p>
+          <p>二十年c/c++軟體開發經驗，十三年編譯器相關工具開發經驗，碩士時研究平行處理。</p>
         </div>
       </article>
       <div class="clear"></div>
@@ -91,8 +90,8 @@ canvas {
       
       <div class="sectionContent">
         <article>
-          <p>1997-1999 碩士班，六月 1999，國立台灣師範大學，台北，主修：資訊科學。</p>
-          <p>1991-1994 學士班，六月 1994，國立台灣科技大學，台北，主修：工業工程。</p>
+          <p>1997-1999 碩士班，國立台灣師範大學，台北，主修：資訊科學。</p>
+          <p>1991-1994 學士班，國立台灣科技大學，台北，主修：工業工程。</p>
         </article>
       </div>
       <div class="clear"></div>
