Refine English via Chatgpt

--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -219,7 +219,7 @@ canvas {
         <article>
           <p>GPU編譯器範圍:</p>
           <p style="margin-left:25px;"><img src="../images/Hisilicon.png" width="100%" height="76"/></p>
-          <p style="margin-left:25px;">為支援自行設計的手機GPU, 移植ARM的code。20%前端需修改, 50%後端需修改(以行數計算)。</p>
+          <p style="margin-left:25px;">為支援自行設計的手機GPU, 移植ARM的code。如上圖黃色部份：20%前端需修改, 50%後端需修改(以行數計算)。</p>
           <p>貢獻:</p>
             <p style="margin-left:25px;">獨立完成80% texture相關的API與optimization (frontend + LLVM backend)與document撰寫。</p>
             <p style="margin-left:25px;">指導別的工程師完成其餘20% texture相關的API, <a href="https://www.khronos.org/registry/OpenGL/specs/es/3.2/GLSL_ES_Specification_3.20.html#texture-functions"> 80 APIs totally here </a>, 核對並與texture的架構leader一起合作。</p>
