--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -189,6 +189,18 @@ canvas {
       </div>
 
       <div class="sectionTitle">
+        <h1>Mediatek</h1>
+      </div>
+      <div class="sectionContent">
+        <article>
+          <p>Graphics GPU Compiler:</p>
+          <p>Optimations in loop unrolling and subgroup operations.</p>
+          <p>Implement MTK-specific instruction encoding, assembler and disassembler based on LLVM.</p>
+          <p>Developed custom assembler and disassembler features to support the Verification and Modeling teams.</p>
+        </article>
+      </div>
+
+      <div class="sectionTitle">
         <h1>Lightelligence</h1>
       </div>
       <div class="sectionContent">
